--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,20 @@
-<cms-header></cms-header>
+<!-- <cms-header></cms-header>
 <cms-contact-list></cms-contact-list>
 <cms-contact-detail></cms-contact-detail>
 
 
 
-<router-outlet />
+<router-outlet /> -->
+
+<!-- <cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
+
+<cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
+ -->
+
+ <cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
+
+<div class="container pull-left">
+  <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
+  <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
+  <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
+</div>
