--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,7 +1,6 @@
-
-<div class="row">
-    <div class="col-md-12">
-        <cms-contact-list></cms-contact-list>
-        <cms-contact-detail></cms-contact-detail>
-    </div>
-</div>
+<div class="container">
+    <cms-contact-list (selectedContactEvent)="onSelectContact($event)"></cms-contact-list>
+  
+    <cms-contact-detail *ngIf="selectedContact" [contact]="selectedContact"></cms-contact-detail>
+  </div>
+  
