--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,25 +1,40 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">WeLearn CMS</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a href="#">Documents</a></li>
-        <li><a href="#">Messages</a></li>
-        <li><a href="#">Contacts</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <!-- Brand -->
+    <a class="navbar-brand" href="#">WeLearn CMS</a>
+
+    <!-- Toggle Button for Mobile View -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar Items -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="onSelected('documents')">Documents</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="onSelected('messages')">Messages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="onSelected('contacts')">Contacts</a>
+        </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            User <span class="caret"></span>
+
+      <!-- Right Side Dropdown -->
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            User
           </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Logout</a></li>
+          <ul class="dropdown-menu" aria-labelledby="userDropdown">
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">Logout</a></li>
           </ul>
         </li>
       </ul>
     </div>
-  </nav>
-  
+  </div>
+</nav>
