--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -1,10 +1,21 @@
-<div class="card">
-    <div class="card-header bg-primary text-white">
-      <h4>{{ document.name }}</h4>
-    </div>
-    <div class="card-body">
-      <p>{{ document.description }}</p>
-      <a [href]="document.url" target="_blank" class="btn btn-outline-primary">View Document</a>
+<div class="panel panel-default document-detail">
+  <div class="panel-heading">
+    <h4 class="document-title">{{ document.name }}</h4>
+    <div class="btn-container">
+      <a class="btn btn-primary" [href]="document.url" target="_blank">View</a>
+      <a class="btn btn-info">Edit</a>
+      <a class="btn btn-danger">Delete</a>
     </div>
   </div>
-  
+  <div class="panel-body">
+    <div>
+      <label>Description:</label>
+      <span>{{ document.description }}</span>
+    </div>
+    <br>
+    <div>
+      <label>URL:</label>
+      <span>{{ document.url }}</span>
+    </div>
+  </div>
+</div>
