--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <cms-contact-list (selectedContactEvent)="onSelectContact($event)"></cms-contact-list>
+    <cms-contact-list></cms-contact-list>
   
     <cms-contact-detail *ngIf="selectedContact" [contact]="selectedContact"></cms-contact-detail>
   </div>
