--- a/src/app/messages/message-item/message-item.component.css
+++ b/src/app/messages/message-item/message-item.component.css
@@ -24,7 +24,7 @@
   .messageHeader {
     font-size: 1rem;
     font-weight: bold;
-    background-color: #000000;
+    background-color: #007bff5b;
     border-radius: 20px;
     padding: 5px 15px;
     display: inline-block;
