--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -1,4 +1,6 @@
-<div class="message-item" [ngClass]="{'sent': message.sender === 'YourName'}">
-    <span class="messageHeader">{{ message.sender }}</span>
+<a class="list-group-item clearfix">
+  <div>
+    <span class="messageHeader">{{ messageSender }}</span>
     <div class="messageText">{{ message.msgText }}</div>
   </div>
+</a>
