--- a/src/app/messages/message-list/message-list.component.html
+++ b/src/app/messages/message-list/message-list.component.html
@@ -1,21 +1,21 @@
 <div class="container message-container">
-    <h2 class="message-title">Messages</h2> 
- 
-    <div class="row">
-       <div class="col-md-5">
-          <div class="panel panel-default">
-             <div class="panel-body">
-                <div class="row">
-                   <div class="col-xs-12">
-                      <p *ngIf="messages.length === 0">No messages found.</p>
-                      <cms-message-item *ngFor="let message of messages" [message]="message"></cms-message-item>
-                   </div>
-                </div>
-             </div>
-             <div class="panel-footer">
-                <cms-message-edit (addMessageEvent)="onAddMessage($event)"></cms-message-edit>
-             </div>
-          </div>
-       </div>
-    </div>
- </div>
+   <h2 class="message-title">Messages</h2> 
+
+   <div class="row">
+      <div class="col-md-5">
+         <div class="panel panel-default">
+            <div class="panel-body">
+               <div class="row">
+                  <div class="col-xs-12">
+                     <p *ngIf="messages.length === 0">No messages found.</p>
+                     <cms-message-item *ngFor="let message of messages" [message]="message"></cms-message-item>
+                  </div>
+               </div>
+            </div>
+            <div class="panel-footer">
+               <cms-message-edit></cms-message-edit> 
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
