--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,16 @@
 <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
  -->
 
- <cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
+ <!-- <cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
 
 <div class="container pull-left">
   <cms-documents *ngIf="selectedFeature === 'documents'"></cms-documents>
   <cms-message-list *ngIf="selectedFeature === 'messages'"></cms-message-list>
   <cms-contacts *ngIf="selectedFeature === 'contacts'"></cms-contacts>
+</div> -->
+
+<cms-header></cms-header>  
+
+<div class="container pull-left">
+  <router-outlet></router-outlet>  
 </div>
