--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -3,8 +3,8 @@
     <h4 class="document-title">{{ document.name }}</h4>
     <div class="btn-container">
       <a class="btn btn-primary" [href]="document.url" target="_blank">View</a>
-      <a class="btn btn-info">Edit</a>
-      <a class="btn btn-danger">Delete</a>
+      <a [routerLink]="['/documents', document.id, 'edit']" class="btn btn-info">Edit</a>
+      <button class="btn btn-danger" (click)="onDelete()">Delete</button>
     </div>
   </div>
   <div class="panel-body">
