--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,3 +1,3 @@
-<a class="list-group-item clearfix documentDiv">
+<a [routerLink]="['/documents', document.id]" class="list-group-item clearfix documentDiv">
   {{ document.name || 'Unnamed Document' }}
 </a>
