--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,10 +1,13 @@
-<div class="row">
+<div class="container">
+  <div class="row">
+    <!-- Documents List -->
     <div class="col-md-5">
       <cms-document-list></cms-document-list>
     </div>
-  
-    <div class="col-md-4">
-      <cms-document-detail *ngIf="selectedDocument" [document]="selectedDocument"></cms-document-detail>
+
+    <!-- Document Details / Edit Form -->
+    <div class="col-md-7">
+      <router-outlet></router-outlet>
     </div>
   </div>
-  
+</div>
