--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,16 +1,16 @@
 <div class="container mt-4">
-  <!-- Header Row with Title and Button -->
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="fw-bold">Contacts</h2>
-    <a [routerLink]="['/contacts', 'new']" class="btn btn-primary px-4 py-2 shadow-sm rounded-pill">+ New Contact</a>
+    <a [routerLink]="['/contacts', 'new']" class="btn btn-primary">+ New Contact</a>
   </div>
 
-  <!-- Contacts List -->
   <div class="row">
     <div class="col-md-12">
-      <cms-contact-item *ngFor="let contact of contacts"
-      [contact]="contact">
-      </cms-contact-item>
+      <div cdkDropList [cdkDropListData]="contacts" [cdkDropListConnectedTo]="['groupList']"
+      class="contact-list">
+   <cms-contact-item *ngFor="let contact of contacts" [contact]="contact" cdkDrag>
+   </cms-contact-item>
+ </div>
     </div>
   </div>
 </div>
