--- a/src/app/documents/document-edit/document-edit.component.html
+++ b/src/app/documents/document-edit/document-edit.component.html
@@ -1,1 +1,66 @@
-<p>document-edit works!</p>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="name">Document Title:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            class="form-control"
+            [(ngModel)]="document.name"
+            #name="ngModel"
+            required
+          />
+          <div *ngIf="name.invalid && name.touched" class="alert alert-danger">
+            Document Title is required.
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="description">Document Description:</label>
+          <input
+            type="text"
+            id="description"
+            name="description"
+            class="form-control"
+            [(ngModel)]="document.description"
+            #description="ngModel"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="url">Document URL:</label>
+          <input
+            type="text"
+            id="url"
+            name="url"
+            class="form-control"
+            [(ngModel)]="document.url"
+            #url="ngModel"
+            required
+          />
+          <div *ngIf="url.invalid && url.touched" class="alert alert-danger">
+            Document URL is required.
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 btn-toolbar">
+          <button class="btn btn-success" type="submit" [disabled]="f.invalid">
+            Save
+          </button>
+          <button class="btn btn-primary" type="button" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
