--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <!-- Contacts List -->
+    <!-- Contact List (left column) -->
     <div class="col-md-5">
       <cms-contact-list></cms-contact-list>
     </div>
 
-    <!-- Contact Details / Edit Form -->
+    <!-- Router outlet for contact detail/edit (right column) -->
     <div class="col-md-7">
       <router-outlet></router-outlet>
     </div>
