--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -1,6 +1,12 @@
-<a class="list-group-item clearfix">
+<!-- <a class="list-group-item clearfix">
   <div>
     <span class="messageHeader">{{ messageSender }}</span>
     <div class="messageText">{{ message.msgText }}</div>
   </div>
-</a>
+</a> -->
+
+<div class="message-item">
+  <h4>{{ message.subject }}</h4>
+  <p>{{ message.msgText }}</p>
+  <small class="text-muted">From: {{ message.sender }}</small>
+</div>
