--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,7 @@
-<p>messages works!</p>
+<div class="container mt-4">
+    <h2 class="fw-bold mb-4">Messages</h2>
+    <cms-message-list></cms-message-list>
+  
+    <!-- Edit form or details will load here -->
+    <router-outlet></router-outlet>
+  </div>
