--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -8,5 +8,5 @@
 <div class="message-item">
   <h4>{{ message.subject }}</h4>
   <p>{{ message.msgText }}</p>
-  <small class="text-muted">From: {{ message.sender }}</small>
+  <small class="text-muted">From: {{ message.senderName }}</small>
 </div>
