--- a/src/app/messages/message-edit/message-edit.component.html
+++ b/src/app/messages/message-edit/message-edit.component.html
@@ -1,23 +1,35 @@
 <div class="panel">
-    <div class="panel-body">
-      <form id="message-edit">
-        <div class="row">
-          <div class="col-sm-12 form-group">
-            <label for="subject">Subject</label>
-            <input type="text" id="subject" class="form-control" #subject>
-          </div>
-  
-          <div class="col-sm-12 form-group">
-            <label for="message">Message</label>
-            <input type="text" id="message" class="form-control" #msgText>
-          </div>
+  <div class="panel-body">
+    <form id="message-edit">
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" class="form-control" #subject>
         </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <button class="btn btn-success" type="button" (click)="onSendMessage()">Send</button>
-            <button class="btn btn-danger" type="button" (click)="onClear()">Clear</button>
-          </div>
+
+        <div class="col-sm-12 form-group">
+          <label for="message">Message</label>
+          <input type="text" id="message" class="form-control" #msgText>
         </div>
-      </form>
-    </div>
+
+        <!-- ✅ Sender Dropdown -->
+        <div class="col-sm-12 form-group">
+          <label for="sender">Sender</label>
+          <select id="sender" class="form-control" [(ngModel)]="selectedSenderId" name="sender">
+            <option value="" disabled selected>Select a contact</option>
+            <option *ngFor="let contact of contacts" [value]="contact._id">
+              {{ contact.name }}
+            </option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="button" (click)="onSendMessage()">Send</button>
+          <button class="btn btn-danger" type="button" (click)="onClear()">Clear</button>
+        </div>
+      </div>
+    </form>
   </div>
+</div>
