--- a/src/app/messages/message-list/message-list.component.html
+++ b/src/app/messages/message-list/message-list.component.html
@@ -8,7 +8,11 @@
                <div class="row">
                   <div class="col-xs-12">
                      <p *ngIf="messages.length === 0">No messages found.</p>
-                     <cms-message-item *ngFor="let message of messages" [message]="message"></cms-message-item>
+                     <cms-message-item
+                     *ngFor="let message of messages"
+                     [message]="message"
+                     [senderName]="getSenderName(message.sender)">
+                     </cms-message-item>
                   </div>
                </div>
             </div>
